# cs171-project

./: .clang-format  .gitignore  CMakeLists.txt  README.md
assets/: debug.frag  debug.vert  phong.frag  phong.vert
data/: n-21607_f-300.data  n-44294_f-600.data  surface-example
include/: camera.h  cloth.h  common.h  input.h  mesh.h  object.h  particle.h  scene.h  shader.h  time_system.h  transform.h
pcisph/: CMakeLists.txt  grid.cpp  pcisph.cpp  pcisph.cu  pcisph.h
release/: main_cpu  main_surface
report/: report.tex
src/: camera.cpp  cloth.cpp  common.cpp  input.cpp  main.cpp  mesh.cpp  object.cpp  particle.cpp  pcisph.cpp  scene.cpp  shader.cpp  time_system.cpp  transform.cpp
