if (CUDA_FOUND)
    add_library(PCISPH SHARED pcisph.cu)
    set_target_properties(PCISPH PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
    set_target_properties(PCISPH PROPERTIES CUDA_ARCHITECTURES native)
else()
    add_library(PCISPH SHARED pcisph.cpp)
endif()

if (OpenMP_CXX_FOUND)
    target_link_libraries(PCISPH PUBLIC OpenMP::OpenMP_CXX)
endif()
