if (CUDA_FOUND)
    add_library(PCISPH_CUDA SHARED pcisph.cu)
    set_target_properties(PCISPH_CUDA PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
    set_target_properties(PCISPH_CUDA PROPERTIES CUDA_ARCHITECTURES native)
endif()
add_library(PCISPH_CPU STATIC pcisph.cpp)

if (OpenMP_CXX_FOUND)
    if (CUDA_FOUND)
        target_link_libraries(PCISPH_CUDA PUBLIC OpenMP::OpenMP_CXX)
    endif()
    target_link_libraries(PCISPH_CPU PUBLIC OpenMP::OpenMP_CXX)
endif()
