if (CUDA_FOUND)
    add_library(PCISPH_CUDA STATIC pcisph.cu)
    set_target_properties(PCISPH_CUDA PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
    set_target_properties(PCISPH_CUDA PROPERTIES CUDA_ARCHITECTURES native)
    if (OpenMP_CXX_FOUND)
        target_link_libraries(PCISPH_CUDA PUBLIC OpenMP::OpenMP_CXX)
    endif()
endif()
add_library(PCISPH_CPU STATIC pcisph.cpp)
